[tool.poetry]
name = "cnllm-ui-server"
version = "0.1.0"
description = "chinese llm server"
authors = ["3314672.qq.com <3314672@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # 根据您的python_version要求
arxiv = "==1.4.7"
django = "==4.1.7"
faiss-cpu = "==1.7.4"
gunicorn = "==20.1.0"
openai = "~0.27.8"
psycopg2-binary = "~2.9.7"
python-dotenv = "~0.21.1"
dj-database-url = "~1.2.0"
djangorestframework = "~3.14.0"
tiktoken = "~0.4.0"
djangorestframework-simplejwt = "~5.2.2"
mysqlclient = "~2.1.1"
django-allauth = "~0.52.0"
dj-rest-auth = "~3.0.0"
requests = "~2.27.1"
beautifulsoup4 = "~4.12.0"
langchain = "==0.3.13"
langchain-community = "==0.3.13"
django-simpleui = "*"
aisuite4cn = "^0.1.7"

[tool.poetry.dev-dependencies]
mysql-connector-python = "~8.0.32"



[[tool.poetry.source]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
